--- a/cst438_gradebook/src/main/resources/application.properties
+++ b/cst438_gradebook/src/main/resources/application.properties
@@ -1,25 +1,18 @@
-# deprecated - settings for running on local host
-#server.port = 8081
-#server.servlet.session.persistent=false
+# server.port = 8081
+server.servlet.session.persistent=false
 
 # registration service
-#registration.url = http://localhost:8080
-# registration.service = REST
+# registration.url = http://localhost:8080
+registration.service = MQ
+spring.rabbitmq.addresses=${CLOUDAMQP_URL}
+
 
 # database properties
-#spring.datasource.url=jdbc:mysql://localhost:3306/gradebook
+#spring.datasource.url=jdbc:mysql://localhost:3306/< DB NAME >
 #spring.datasource.username=root
-#spring.datasource.password=b4c0nGr34se
-#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.password=< PASSWORD >
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.hikari.maximum-pool-size=5
 
 # logging.level.org.springframework.security = TRACE
-debug = true
-
-
-# settings for running on heroku
-server.servlet.session.persistent=false
-gradebook.service = MQ
-registration.service = MQ 
-spring.rabbitmq.addresses=${CLOUDAMQP_URL}
-spring.jpa.hibernate.ddl-auto = update
-spring.datasource.hikari.maximum-pool-size=5
+# debug = true
