Assignment 6 back end changes

--- a/cst438_gradebook/src/main/resources/application.properties
+++ b/cst438_gradebook/src/main/resources/application.properties
@@ -1,18 +1,19 @@
-# server.port = 8081
+server.port = 8081
 server.servlet.session.persistent=false
-
-# registration service
-# registration.url = http://localhost:8080
-registration.service = MQ
-spring.rabbitmq.addresses=${CLOUDAMQP_URL}
-
-
+# URL of gradebook service,  
+# service options:  default | REST | MQ  
+#     meaning no messages, use Http REST, or use  message queue
+gradebook.service = default  
+registration.service = default
+# URL for redirect back to React after successful login
+frontend.post.login.url = http://localhost:3000/semester
+# google authentication provider
+spring.security.oauth2.client.registration.google.client-id = 696268582188-hvj7nb52t5j4n1gve288920ertkeu4hs.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret = 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
 # database properties
-#spring.datasource.url=jdbc:mysql://localhost:3306/< DB NAME >
-#spring.datasource.username=root
-#spring.datasource.password=< PASSWORD >
+spring.datasource.url=jdbc:mysql://localhost:3306/person
+spring.datasource.username=root
+spring.datasource.password=b4c0nGr34se
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.hikari.maximum-pool-size=5
-
-# logging.level.org.springframework.security = TRACE
 # debug = true
+# logging.level.org.springframework.security = TRACE
