--- a/cst438_gradebook/pom.xml
+++ b/cst438_gradebook/pom.xml
@@ -42,6 +42,12 @@
     		<optional>true</optional>
 		</dependency>
 		
+		<!-- for OAuth -->
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
+		
 		<!-- for rabbitmq -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
