--- a/cst438_gradebook/src/main/resources/application.properties
+++ b/cst438_gradebook/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.servlet.session.persistent=false
 gradebook.service = default  
 registration.service = default
 # URL for redirect back to React after successful login
-frontend.post.login.url = http://localhost:3000/gradebook
+frontend.post.login.url = http://localhost:3000/assignment
 # google authentication provider
 spring.security.oauth2.client.registration.google.client-id = 696268582188-hvj7nb52t5j4n1gve288920ertkeu4hs.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret = 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
